# effective-inference

./: 1_prepare_data.py  2_train_linear.py  3_eval_model.py  3_eval_model_gpt.py  4_eval_baseline.py  4_eval_baseline_gpt.py  4_eval_baseline_gpt2.py  Preprocessing.ipynb  README.md  bad_names_generaition.py  bad_names_generaition_codellama.py  bad_names_generaition_starcoder.py  code_data.csv  config.yaml  config_gpt.yaml  gpt2_attentions_aproximations.py  linear_metrics_report2023-09-18.csv  llama_instruct_names_generate.py  llama_names_generate.py  names_generaition_codellama.py  pyproject.toml  run_pipeline.sh  run_pipeline_gpt.sh  test.ipynb
clean_naming/: Preprocessing.ipynb  bad_names_generaition.py  code_data.csv  functions_data.csv
data/bert/: baseline_full_data.csv  baseline_mixed_data.csv  baseline_mrpc_uniform_data.csv  baseline_uniform_data.csv  baseline_window_mrpc.csv  window_data.csv  window_data_full_train.csv
data/gpt2/: baseline_linear_data.csv  baseline_uniform_data.csv  baseline_uniform_perplexi_data.csv  baseline_window_data.csv
notebooks/: 0_prepare_data.ipynb  Bert_pipeline_debug.ipynb  LinReg_to_predict_attention_weights.ipynb  Llama_names_processing.ipynb  Metricks_visualisation.ipynb  Pipeline_linear.ipynb  Pipeline_linear_metrics.ipynb  Pipleine_linear.ipynb  PredictBertAttention.ipynb  PredictBertAttentionOterModels.ipynb  Preprocessing.ipynb  Untitled.ipynb  dataset_preparation.ipynb  decoder_evaluation.ipynb  encoder_embedind_pos_training.ipynb  encoder_evaluation.ipynb  encoder_evaluation_vanila_bert.ipynb  encoder_evaluation_window_bert.ipynb  glue_analysis.ipynb  pipeline.ipynb  position_embeddind_importance.ipynb  test_attention_mean.ipynb
notebooks/pipeline/: 0_prepare_data.ipynb  1_train_linear-Copy1.ipynb  1_train_linear-Copy2.ipynb  1_train_linear.ipynb  1_train_linear_models.ipynb  2_eval_linear.ipynb  3_learn_residuals.ipynb
utils/: config.py  dataset_cache.py  dataset_utils.py  prepare_dataset.py  results.pickle  train_linear_utils.py  utils.py
utils/attention_patterns/: bert_module_linear.py  bert_modules.py  gpt2_module_linear.py  gpt2_modules.py
(+8817 files in other folders)
