[tool.poetry]
name = "effective-inference"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "effective_inference"}]

[tool.poetry.dependencies]
python = "3.11.3"
transformers = {extras = ["torch"], version = "^4.34.0"}
torch = "2.0.0"
jupyter = "^1.0.0"
datasets = "^2.13.1"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
glances = "^3.4.0.3"
h5py = "^3.9.0"
datetime = "^5.2"
seaborn = "^0.12.2"
plotly = "^5.17.0"
dash = "^2.13.0"
pyyaml = "^6.0.1"
tensorboard = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
