[tool.poetry]
name = "effective-inference"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "effective_inference"}]

[tool.poetry.dependencies]
python = "3.11.3"
transformers = {extras = ["torch"], version = "^4.34.0"}
torch = "2.2.0"
jupyter = "^1.0.0"
datasets = "^2.13.1"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
glances = "^3.4.0.3"
h5py = "^3.9.0"
datetime = "^5.2"
seaborn = "^0.12.2"
plotly = "^5.17.0"
dash = "^2.13.0"
pyyaml = "^6.0.1"
tensorboard = "^2.14.1"
dataset = "^1.6.2"
auto-gptq = "^0.5.1"
optimum = "^1.14.1"
accelerate = "^0.24.1"
bitsandbytes = "^0.41.2.post2"
huggingface-hub = {extras = ["cli"], version = "^0.19.4"}
notebook = "^7.0.7"
outlines = "^0.0.27"
bz2file = "^0.98"
openai = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
